--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "ant-design-vue": "^4.2.6",
     "axios": "^1.11.0",
+    "less": "^4.4.1",
+    "less-loader": "^12.3.0",
     "pinia": "^3.0.3",
     "tslib": "^2.8.1",
     "vue": "^3.5.18",
