--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@lhlyu/vue-virtual-waterfall": "^1.0.8",
     "ant-design-vue": "^4.2.6",
     "axios": "^1.11.0",
     "less": "^4.4.1",
@@ -24,7 +25,8 @@
     "pinia": "^3.0.3",
     "tslib": "^2.8.1",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-virtual-waterfall": "^1.3.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
