--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "@lhlyu/vue-virtual-waterfall": "^1.0.8",
     "ant-design-vue": "^4.2.6",
     "axios": "^1.11.0",
-    "less": "^4.4.1",
-    "less-loader": "^12.3.0",
+    "filesize": "^11.0.2",
     "pinia": "^3.0.3",
     "tslib": "^2.8.1",
     "vue": "^3.5.18",
@@ -29,6 +28,7 @@
     "vue-virtual-waterfall": "^1.3.0"
   },
   "devDependencies": {
+    "@ant-design-vue/use": "^0.0.1-alpha.10",
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^22.16.5",
     "@umijs/openapi": "^1.13.15",
@@ -39,6 +39,8 @@
     "eslint": "^9.31.0",
     "eslint-plugin-vue": "~10.3.0",
     "jiti": "^2.4.2",
+    "less": "^4.4.1",
+    "less-loader": "^12.3.0",
     "npm-run-all2": "^8.0.4",
     "prettier": "3.6.2",
     "typescript": "~5.8.0",
