--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pinia": "^3.0.3",
     "tslib": "^2.8.1",
     "vue": "^3.5.18",
+    "vue-cropper": "^1.1.4",
     "vue-router": "^4.5.1",
     "vue-virtual-waterfall": "^1.3.0"
   },
