--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "@lhlyu/vue-virtual-waterfall": "^1.0.8",
     "ant-design-vue": "^4.2.6",
     "axios": "^1.11.0",
+    "dayjs": "^1.11.18",
     "filesize": "^11.0.2",
     "pinia": "^3.0.3",
     "tslib": "^2.8.1",
     "vue": "^3.5.18",
     "vue-cropper": "^1.1.4",
     "vue-router": "^4.5.1",
-    "vue-virtual-waterfall": "^1.3.0"
+    "vue-virtual-waterfall": "^1.3.0",
+    "vue3-colorpicker": "^2.3.0"
   },
   "devDependencies": {
     "@ant-design-vue/use": "^0.0.1-alpha.10",
