--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "ant-design-vue": "^4.2.6",
     "axios": "^1.11.0",
     "dayjs": "^1.11.18",
+    "echarts": "^5.6.0",
+    "echarts-wordcloud": "^2.1.0",
     "filesize": "^11.0.2",
     "pinia": "^3.0.3",
     "tslib": "^2.8.1",
     "vue": "^3.5.18",
     "vue-cropper": "^1.1.4",
+    "vue-echarts": "^7.0.3",
     "vue-router": "^4.5.1",
     "vue-virtual-waterfall": "^1.3.0",
     "vue3-colorpicker": "^2.3.0"
